--- a/Authentication/views/login.ejs
+++ b/Authentication/views/login.ejs
@@ -25,16 +25,25 @@
       </div>
     </div>
 
-    <!-- <div class="col-sm-4">
+    <!-- Sign in buttons -->
+    <div class="col-sm-4">
       <div class="card">
         <div class="card-body">
-          <a class="btn btn-block" href="/auth/google" role="button">
+
+          <!-- Sign up with Google -->
+          <a class="btn btn-block btn-social btn-google" href="/auth/google" role="button">
             <i class="fab fa-google"></i>
             Sign In with Google
           </a>
+
+          <!-- Sign up with Facebook -->
+          <a class="btn btn-block btn-social btn-facebook" href="/auth/facebook" role="button">
+            <i class="fab fa-facebook"></i>
+            Sign Up with Facebook
+          </a>
         </div>
       </div>
-    </div> -->
+    </div>
 
   </div>
 </div>
