Section 33 - React - Up to Spread Operator
All exercises from the last commit to the lecture on the spread operator. On the last excercise specifically, Angela uses the spread operator as a way to reduce the code inside the "handleInput()" function. However, I decided to shorten it by using a "deep copy" of the object with all the info. She uses an even more compact method. Committing just to keep track of my previous method.

--- a/React/keeper_app/public/styles.css
+++ b/React/keeper_app/public/styles.css
@@ -73,6 +73,9 @@ CLASSES
 
 .content {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(4, 1fr);
+    grid-gap: 10px 20px;
+    justify-content: center;
+
+    /* The number of columns dynamically resizes to fit as many elements as possible */
+    grid-template-columns: repeat(auto-fill, 250px);
 }
