--- a/React/keeper_app/public/styles.css
+++ b/React/keeper_app/public/styles.css
@@ -31,6 +31,7 @@ header h1 {
 footer {
     /* Center text */
     text-align: center;
+    margin-top: 4rem;
 
     /* Fix footer at the bottom */
     position: absolute;
@@ -55,7 +56,7 @@ CLASSES
     margin: 16px;
     padding: 1rem;
     border-radius: 7px;
-    box-shadow: 0 2px 5px rgb(224, 224, 224); 
+    box-shadow: 0 2px 5px rgb(138, 137, 137); 
     line-height: 1.5;
 }
 
@@ -71,6 +72,18 @@ CLASSES
     word-wrap: break-word;
 }
 
+.note button {
+    position: relative;
+    float: right;
+    margin-right: 10px;
+    color: #f5ba13;
+    border: none;
+    width: 36px;
+    height: 36px;
+    cursor: pointer;
+    outline: none;
+}
+
 .content {
     display: grid;
     grid-gap: 10px 20px;
@@ -78,4 +91,41 @@ CLASSES
 
     /* The number of columns dynamically resizes to fit as many elements as possible */
     grid-template-columns: repeat(auto-fill, 250px);
+}
+
+
+form {
+    position: relative;
+    width: 480px;
+    margin: 30px auto 40px auto;
+    background: #fff;
+    padding: 15px;
+    border-radius: 7px;
+    box-shadow: 0 1px 5px rgb(138, 137, 137);
+}
+  
+form input,
+form textarea {
+    width: 100%;
+    border: none;
+    padding: 4px;
+    outline: none;
+    font-size: 1.2em;
+    font-family: inherit;
+    resize: none;
+}
+
+form button {
+    position: absolute;
+    right: 18px;
+    bottom: -18px;
+    background: #f5ba13;
+    color: #fff;
+    border: none;
+    border-radius: 50%;
+    width: 36px;
+    height: 36px;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.3);
+    cursor: pointer;
+    outline: none;
 }
